added css style sheet

--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h3>My Hobbies</h3>
@@ -12,6 +13,7 @@
         <li>Language Exchange</li>
         <li>Martial Arts</li>
         <li>Making Friends With Dogs</li>
+        <li>Permaculture</li>
     </ul>
 </body>
 </html>
