--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>🦀Rhycecake|Personal Site</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -19,7 +21,7 @@
             </td>
         </tr>
     </table>
-    <!-- <img src="https://scontent.ffcm1-2.fna.fbcdn.net/v/t31.18172-8/24958651_1473049896149001_6683654599203212149_o.jpg?_nc_cat=101&ccb=1-3&_nc_sid=174925&_nc_ohc=5oNkBPH3af8AX-38Rs1&_nc_ht=scontent.ffcm1-2.fna&oh=1b833b5595a1b337a98b63f7902f295b&oe=6097CD2C" width=200 alt="profile picture"> -->
+    
 
     
 
