updated placeholder content

--- a/hobbies.html
+++ b/hobbies.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h3>My Hobbies</h3>
+    <h3>My Hobbies/Interests</h3>
 
     <ul>
         <li>West Coast Swing Dancing</li>
-        <li>Language Exchange</li>
-        <li>Martial Arts</li>
+        <li>Language Exchange (Spanish)</li>
+        <li>Martial Arts (jiu-jitsu, aikido, wing chun)</li>
         <li>Making Friends With Dogs</li>
         <li>Permaculture</li>
     </ul>
