--- a/index.html
+++ b/index.html
@@ -42,18 +42,34 @@
     <h3>Education</h3>
 
     <ul>
-        <li>University of Vermont</li>
+        <li>University of Vermont (3.84)</li>
             <ul>
                 <li><a href="https://www.uvm.edu/cals/cdae" target="_blank">Community Development & Applied Economics</a></li>
             </ul>
-        <li>Normandale Community College</li>
+    <br>
+        <li>Normandale Community College (3.61)</li>
             <ul>
-                <li>Miscellaneous</li>
+                <li>
+                    Foundational courses in statistics, calculus, biology, chemistry,
+                     physics, <br> finance, economics, financial/managerial accounting,
+                      and management.
+                </li>
             </ul>
+    <br>        
         <li>University of Minnesota</li>
             <ul>
                 <li><a href="https://bootcamp.umn.edu/data/" target="_blank">Certificate of Data Visualizaion & Analytics</a></li>
                 <li><a href="https://bootcamp.umn.edu/coding/" target="_blank">Certificate of Full-Stack Web Development</a></li>
+            </ul>
+    <br>        
+        <li>Midwest Permaculture</li>
+            <ul>
+                <li>Permaculture Design Certificate</li>
+            </ul>
+    <br>        
+        <li>Solar Energy International</li>
+            <ul>
+                <li>Photovoltaic Systems: 101</li>
             </ul>
     </ul>
 
@@ -81,12 +97,12 @@
 
         <tbody>
             <tr>
-                <td>2010-2013</td>
-                <td>Lead Developer at Comapany</td>
+                <td>2018-2020</td>
+                <td>Order Fulfillment Specialist at Target</td>
             </tr>
             <tr>
-                <td>2010</td>
-                <td>Resarcher at Institute</td>
+                <td>2015-2016</td>
+                <td>Tutor at College Tutors</td>
             </tr>
         </tbody>
         <tfoot></tfoot>
